♻️ Polish "Data lineage" section and rename to "Trace data & code" (#208)

--- a/docs/schmidt22.ipynb
+++ b/docs/schmidt22.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow.ipynb)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fproject-flow.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/schmidt22.ipynb)"
    ]
   },
   {
@@ -13,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project flow"
+    "# Trace data & code in a project: Schmidt _et al._ (2022)"
    ]
   },
   {
@@ -21,23 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LaminDB allows tracking data lineage on the entire project level.\n",
+    "LaminDB lets you trace data lineage across an entire project.\n",
     "\n",
-    "Here, we walk through exemplified app uploads, pipelines & notebooks following [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/).\n",
+    "Here we follow [Schmidt _et al._ (2022)](https://pubmed.ncbi.nlm.nih.gov/35113687/) through pipelines & notebooks.\n",
     "\n",
-    "A CRISPR screen reading out a phenotypic endpoint on T cells is paired with scRNA-seq to generate insights into IFN-γ production.\n",
+    "A CRISPR screen reading out a phenotypic endpoint is paired with scRNA-seq to generate insights into IFN-γ production.\n",
     "\n",
-    "These insights get linked back to the original data through the steps taken in the project to provide context for interpretation & future decision making.\n",
+    "Through data lineage, these insights can be traced back through each preceding step to the original data to provide context for interpretation & future decision making.\n",
     "\n",
     "<img src=\"https://lamin-site-assets.s3.amazonaws.com/.lamindb/KQmzmmLOeBN0C8Ykitjn.svg\" width=\"800\">\n",
     "\n",
-    ":::{dropdown} More specifically: Why should I care about data flow?\n",
+    ":::{dropdown} More specifically: Why should I care about data lineage?\n",
     "\n",
-    "Data flow tracks data sources & transformations to trace biological insights, verify experimental outcomes, meet regulatory standards, increase the robustness of research and optimize the feedback loop of team-wide learning iterations.\n",
-    "\n",
-    "While tracking data flow is easier when it's governed by deterministic pipelines, it becomes hard when it's governed by interactive human-driven analyses.\n",
-    "\n",
-    "LaminDB interfaces workflow mangers for the former and embraces the latter.\n",
+    "Data lineage tracks data sources & transformations to trace biological insights, verify experimental outcomes, meet regulatory standards, increase the robustness of research and optimize the feedback loop of team-wide learning iterations.\n",
     "\n",
     ":::\n",
     "\n",
@@ -60,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty,aws]'\n",
+    "# pip install lamindb\n",
     "!lamin init --storage ./mydata"
    ]
   },
@@ -92,20 +87,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following, we walk through exemplified steps covering different types of transforms ({class}`~docs:lamindb.Transform`).\n",
-    "\n",
-    "```{note}\n",
-    "\n",
-    "The full notebooks are in [this repository](https://github.com/laminlabs/rnd-demo).\n",
-    "\n",
-    "```"
+    "In the following, we walk through exemplified steps covering different types of transforms ({class}`~docs:lamindb.Transform`)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### App upload of phenotypic data ![](https://img.shields.io/badge/app-444444)"
+    "### Upload of phenotypic data ![](https://img.shields.io/badge/app-444444)"
    ]
   },
   {
@@ -125,12 +114,10 @@
    },
    "outputs": [],
    "source": [
-    "# This function mimics the upload of artifacts via the UI\n",
-    "# In reality, you simply drag and drop files into the UI\n",
+    "# this function mimics the upload of artifacts via the UI\n",
+    "# in reality, one would drag and drop a file\n",
     "def mock_upload_crispra_result_app():\n",
     "    ln.setup.login(\"testuser1\")\n",
-    "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"upload\")\n",
-    "    ln.track(transform=transform)\n",
     "    output_path = ln.core.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage.root)\n",
     "    output_file = ln.Artifact(\n",
     "        output_path, description=\"Raw data of schmidt22 crispra GWS\"\n",
@@ -180,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect data flow:"
+    "Inspect data lineage:"
    ]
   },
   {
@@ -280,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect data flow:"
+    "Inspect data lineage:"
    ]
   },
   {
@@ -393,33 +380,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we can also look at the sequence of transforms:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = ln.Transform.search(\"Project flow\").first()\n",
-    "transform.predecessors.to_dataframe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform.view_lineage()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Understand runs"
    ]
   },
@@ -428,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We tracked pipeline and notebook runs through `lamindb.core.Context.track`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record within a global context.\n",
+    "We tracked pipeline and notebook runs through {func}`~lamindb.track`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record within a global context.\n",
     "\n",
     "{class}`~lamindb.Artifact` objects are the inputs and outputs of runs. "
    ]
@@ -458,7 +418,7 @@
     "\n",
     "When accessing an artifact via `cache()`, `load()` or `open()`, two things happen:\n",
     "\n",
-    "1. The current run gets added to `artifact.input_of`\n",
+    "1. The current run gets added to `artifact.input_of_runs`\n",
     "2. The transform of that artifact gets added as a parent of the current transform\n",
     "\n",
     "You can then switch off auto-tracking of run inputs if you set `ln.settings.track_run_inputs = False`: {doc}`docs:faq/track-run-inputs`\n",
@@ -476,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query by provenance"
+    "## Query by lineage"
    ]
   },
   {
@@ -545,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.created_by"
+    "artifact.created_by.handle"
    ]
   },
   {
@@ -609,21 +569,6 @@
    "outputs": [],
    "source": [
     "ln.view()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "!lamin login testuser1\n",
-    "!rm -r ./mydata\n",
-    "!lamin delete --force mydata"
    ]
   }
  ],
