♻️ Do not run slow parts

--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "# check the curated metadata of the first artifact\n",
     "artifact1 = artifacts_tahoe[0]\n",
-    "artifact1.describe()"
+    "# artifact1.describe()"
    ]
   },
   {
@@ -324,32 +324,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "28",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "filter_expr = (pc.field(\"cell_name\") == cell_lines.cvcl_0023.name) & (\n",
     "    pc.field(\"drug\") == drugs.piroxicam.name\n",
     ")\n",
     "obs_metadata_df = obs_metadata_ds.scanner(filter=filter_expr).to_table().to_pandas()\n",
-    "obs_metadata_df.value_counts(\"plate\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs_metadata_df.head()"
+    "obs_metadata_df.value_counts(\"plate\")\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "Retrieve the corresponding cells from h5ad files.\n",
@@ -370,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "source": [
     "## scBaseCount"
@@ -379,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "source": [
     "This project has 105 collections (21 organisms x 5 count features):"
@@ -398,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {
     "tags": [
      "hide-output"
@@ -411,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -422,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {
     "tags": [
      "hide-output"
@@ -458,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "source": [
     "### Load the h5ad files with obs metadata"
@@ -466,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "source": [
     "Load the h5ads as a single AnnData:"
@@ -475,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "39",
    "metadata": {
     "tags": [
      "hide-output"
@@ -494,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "source": [
     "Open the sample metadata:"
@@ -503,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {
     "tags": [
      "hide-output"
@@ -534,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "source": [
     "Fetch corresponding sample metadata:"
@@ -543,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "source": [
     "Add the sample metadata to the AnnData:"
@@ -564,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "47",
    "metadata": {
     "tags": [
      "hide-output"
