--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -145,20 +145,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "small_intenstine_af = (\n",
-    "    small_intenstine_collection.artifacts.filter(key__icontains=\"raw_expr.h5ad\")\n",
-    "    .distinct()\n",
-    "    .one()\n",
-    ")\n",
-    "adata = small_intenstine_af.load()\n",
-    "adata"
+    "small_intenstine_artifact = small_intenstine_collection.artifacts.get(\n",
+    "    key__icontains=\"raw_expr.h5ad\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "adata = small_intenstine_artifact.load()\n",
+    "adata\n",
+    "```"
    ]
   },
   {
@@ -172,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently, only the `Artifacts` of the `raw_expr.h5ad` data products are labeled with metadata.\n",
+    "The artifacts corresponding to the `raw_expr.h5ad` data products are labeled with metadata.\n",
     "The available metadata includes `ln.Reference`, `bt.Tissue`, `bt.Disease`, `bt.ExperimentalFactor`, and many more.\n",
     "Please have a look at [the instance](https://lamin.ai/laminlabs/hubmap) for more details."
    ]
@@ -188,12 +190,10 @@
    "outputs": [],
    "source": [
     "# Get one dataset with a specific type of heart failure\n",
-    "heart_failure_adata = (\n",
-    "    ln.Artifact.filter(diseases__name=\"heart failure with reduced ejection fraction\")\n",
-    "    .first()\n",
-    "    .load()\n",
-    ")\n",
-    "heart_failure_adata"
+    "heart_failure_artifact = ln.Artifact.filter(\n",
+    "    diseases__name=\"heart failure with reduced ejection fraction\"\n",
+    ").first()\n",
+    "heart_failure_artifact"
    ]
   },
   {
@@ -214,21 +214,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "# Get one placenta tissue dataset:\n",
-    "placenta_data = ln.Artifact.filter(tissues__name=\"placenta\").first().cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "placenta_data = ln.Artifact.filter(tissues__name=\"placenta\").first().cache()\n",
+    "\n",
     "def load_matrix(group):\n",
     "    values = group[\"block0_values\"][:]\n",
     "    columns = group[\"block0_items\"][:].astype(str)\n",
@@ -239,31 +231,18 @@
     "\n",
     "with h5py.File(placenta_data, \"r\") as f:\n",
     "    tpm_df = load_matrix(f[\"tpm\"])\n",
-    "    reads_df = load_matrix(f[\"num_reads\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    reads_df = load_matrix(f[\"num_reads\"])\n",
+    "\n",
     "# Use raw read counts as the main matrix\n",
     "placenta_adata = ad.AnnData(X=reads_df.values)\n",
     "placenta_adata.obs_names = reads_df.index\n",
     "placenta_adata.var_names = reads_df.columns\n",
     "\n",
     "# Store TPM normalized values in a layer\n",
-    "placenta_adata.layers[\"tpm\"] = tpm_df.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "placenta_adata"
+    "placenta_adata.layers[\"tpm\"] = tpm_df.values\n",
+    "\n",
+    "placenta_adata\n",
+    "```"
    ]
   }
  ],
