🚚 Rename df() to to_dataframe()

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -190,7 +190,7 @@
     "    reference=\"CTRL\",\n",
     ")\n",
     "\n",
-    "rank_genes_groups_df = sc.get.rank_genes_groups_df(adata, \"STIM\")\n",
+    "rank_genes_groups_df = sc.get.rank_genes_groups_to_dataframe(adata, \"STIM\")\n",
     "rank_genes_groups_df.head()"
    ]
   },
