🚚 Rename .using() to .connect()

--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "```{note}\n",
     "\n",
-    "If you want to transfer artifacts or metadata into your own instance, use `.using(\"laminlabs/arc-virtual-cell-atlas\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
+    "If you want to transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/arc-virtual-cell-atlas\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
     "\n",
     "```"
    ]
