--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "```{note}\n",
     "\n",
-    "If you want to transfer artifacts or metadata into your own instance, use `.using(\"laminlabs/hubmap\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
+    "If you want to transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/hubmap\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
     "\n",
     "```"
    ]
