--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "metadata_files = (\n",
-    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    ln.Artifact.connect(\"scportrait/examples\")\n",
     "    .get(key=\"input_data_imaging_usecase/metadata_files.csv\")\n",
     "    .load()\n",
     ")\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8074b756",
+   "id": "10",
    "metadata": {},
    "source": [
     "All images feature the U2OS cell line, captured using an Opera Phenix microscope at 20X magnification.\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ec24b1",
+   "id": "11",
    "metadata": {},
    "source": [
     "### Define a schema"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6577f759",
+   "id": "12",
    "metadata": {},
    "source": [
     "We define a {class}`~lamindb.Schema` to curate metadata."
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {
     "tags": [
      "hide-output"
@@ -197,8 +197,16 @@
    },
    "outputs": [],
    "source": [
-    "ulabel_names = [\"genotype\", \"stimulation\", \"cell_line_clone\", \"channel\", \n",
-    "                \"FOV\", \"magnification\", \"microscope\", \"imaged structure\"]\n",
+    "ulabel_names = [\n",
+    "    \"genotype\",\n",
+    "    \"stimulation\",\n",
+    "    \"cell_line_clone\",\n",
+    "    \"channel\",\n",
+    "    \"FOV\",\n",
+    "    \"magnification\",\n",
+    "    \"microscope\",\n",
+    "    \"imaged structure\",\n",
+    "]\n",
     "\n",
     "autophagy_imaging_schema = ln.Schema(\n",
     "    name=\"Autophagy imaging schema\",\n",
@@ -206,7 +214,9 @@
     "        *[ln.Feature(name=name, dtype=ln.ULabel.name).save() for name in ulabel_names],\n",
     "        ln.Feature(name=\"image_path\", dtype=str, description=\"image path\").save(),\n",
     "        ln.Feature(name=\"cell_line\", dtype=bt.CellLine.name).save(),\n",
-    "        ln.Feature(name=\"resolution\", dtype=float, description=\"conversion factor for px to µm\").save(),\n",
+    "        ln.Feature(\n",
+    "            name=\"resolution\", dtype=float, description=\"conversion factor for px to µm\"\n",
+    "        ).save(),\n",
     "    ],\n",
     "    coerce_dtype=True,\n",
     ").save()"
@@ -214,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f485d6",
+   "id": "14",
    "metadata": {},
    "source": [
     "### Curate the dataset"
@@ -223,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "15",
    "metadata": {
     "lines_to_next_cell": 2,
     "tags": [
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "16",
    "metadata": {},
    "source": [
     "Add and standardize missing terms:"
@@ -251,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "17",
    "metadata": {
     "tags": [
      "hide-output"
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9583edd",
+   "id": "18",
    "metadata": {},
    "source": [
     "### Annotate images with metadata"
@@ -277,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "source": [
     "We add images to our `lamindb` instance and annotate them with their metadata."
@@ -286,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "20",
    "metadata": {
     "tags": [
      "hide-output"
@@ -301,25 +311,38 @@
     "artifacts = []\n",
     "\n",
     "for _, row in metadata_files.iterrows():\n",
-    "    artifact = ln.Artifact.using(\"scportrait/examples\").filter(key__icontains=row[\"image_path\"]).one()\n",
+    "    artifact = (\n",
+    "        ln.Artifact.connect(\"scportrait/examples\")\n",
+    "        .filter(key__icontains=row[\"image_path\"])\n",
+    "        .one()\n",
+    "    )\n",
     "    artifact.save()\n",
     "    artifact.cell_lines.add(bt.CellLine.filter(name=row.cell_line).one())\n",
-    "    \n",
-    "    artifact.features.add_values({\n",
-    "        col: row[col] for col in [\"genotype\", \"stimulation\", \"cell_line_clone\", \n",
-    "                                  \"channel\", \"FOV\", \"magnification\", \"microscope\", \"resolution\"]\n",
-    "    } | {\n",
-    "        \"imaged structure\": row[\"imaged structure\"],\n",
-    "        \"study\": \"autophagy imaging\"\n",
-    "    })\n",
-    "    \n",
+    "\n",
+    "    artifact.features.add_values(\n",
+    "        {\n",
+    "            col: row[col]\n",
+    "            for col in [\n",
+    "                \"genotype\",\n",
+    "                \"stimulation\",\n",
+    "                \"cell_line_clone\",\n",
+    "                \"channel\",\n",
+    "                \"FOV\",\n",
+    "                \"magnification\",\n",
+    "                \"microscope\",\n",
+    "                \"resolution\",\n",
+    "            ]\n",
+    "        }\n",
+    "        | {\"imaged structure\": row[\"imaged structure\"], \"study\": \"autophagy imaging\"}\n",
+    "    )\n",
+    "\n",
     "    artifacts.append(artifact)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "22",
    "metadata": {},
    "source": [
     "In addition, we create a {class}`~lamindb.Collection` to hold all {class}`~lamindb.Artifact` that belong to this specific imaging study."
@@ -337,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "23",
    "metadata": {
     "tags": [
      "hide-output"
@@ -354,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "24",
    "metadata": {},
    "source": [
     "Let's look at some example images where we match images from the same clone, stimulation condition, and FOV to ensure correct channel alignment."
@@ -363,34 +386,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_example_images(df, n_images=3, title_prefix=\"\"):\n",
-    "    \"\"\"Plot example images from dataframe\"\"\"\n",
+    "    \"\"\"Plot example images from dataframe.\"\"\"\n",
     "    fig, axs = plt.subplots(1, n_images, figsize=(15, 5))\n",
     "    if n_images == 1:\n",
     "        axs = [axs]\n",
     "    for idx, row in df.iterrows():\n",
-    "        path = ln.Artifact.using(\"scportrait/examples\").get(key=row[\"image_path\"]).cache()\n",
+    "        path = (\n",
+    "            ln.Artifact.connect(\"scportrait/examples\")\n",
+    "            .get(key=row[\"image_path\"])\n",
+    "            .cache()\n",
+    "        )\n",
     "        image = imread(path)\n",
     "        axs[idx].imshow(image)\n",
     "        axs[idx].set_title(f\"{title_prefix}{row['imaged structure']}\")\n",
     "        axs[idx].axis(\"off\")\n",
     "    return fig, axs\n",
     "\n",
-    "sorted_metadata = metadata_files.sort_values(by=[\"cell_line_clone\", \"stimulation\", \"FOV\"])\n",
+    "\n",
+    "sorted_metadata = metadata_files.sort_values(\n",
+    "    by=[\"cell_line_clone\", \"stimulation\", \"FOV\"]\n",
+    ")\n",
     "\n",
     "# Plot first 3 and last 3\n",
-    "plot_example_images(sorted_metadata.head(3).reset_index(drop=True));\n",
+    "plot_example_images(sorted_metadata.head(3).reset_index(drop=True))\n",
     "plot_example_images(sorted_metadata.tail(3).reset_index(drop=True));"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "26",
    "metadata": {
     "tags": [
      "hide-output"
