--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -166,7 +166,7 @@
     "ln.ULabel(name=\"scportrait config\").save()\n",
     "\n",
     "# Load config file for processing all datasets\n",
-    "config_file_af = ln.Artifact.using(\"scportrait/examples\").get(\n",
+    "config_file_af = ln.Artifact.connect(\"scportrait/examples\").get(\n",
     "    key=\"input_data_imaging_usecase/config.yml\"\n",
     ")\n",
     "\n",
@@ -425,7 +425,7 @@
     "# Add metadata and labels\n",
     "annotation = shared_features.copy()\n",
     "annotation[\"imaged structure\"] = [\n",
-    "    ln.ULabel.using(\"scportrait/examples\").get(name=name)\n",
+    "    ln.ULabel.connect(\"scportrait/examples\").get(name=name)\n",
     "    for name in [\"LckLip-mNeon\", \"DNA\", \"mCherry-LC3B\"]\n",
     "]\n",
     "\n",
@@ -484,10 +484,12 @@
     "    # Check if already processed\n",
     "    base_key = f\"processed_data_imaging_use_case/{unique_project_id}\"\n",
     "    try:\n",
-    "        ln.Artifact.using(\"scportrait/examples\").get(\n",
+    "        ln.Artifact.connect(\"scportrait/examples\").get(\n",
     "            key=f\"{base_key}/single_cell_data.h5ad\"\n",
     "        )\n",
-    "        ln.Artifact.using(\"scportrait/examples\").get(key=f\"{base_key}/spatialdata.zarr\")\n",
+    "        ln.Artifact.connect(\"scportrait/examples\").get(\n",
+    "            key=f\"{base_key}/spatialdata.zarr\"\n",
+    "        )\n",
     "        print(\"Dataset already processed. Skipping.\")\n",
     "        return\n",
     "    except ln.Artifact.DoesNotExist:\n",
@@ -523,7 +525,7 @@
     "\n",
     "    annotation = shared_features.copy()\n",
     "    annotation[\"imaged structure\"] = [\n",
-    "        ln.ULabel.using(\"scportrait/examples\").get(name=name)\n",
+    "        ln.ULabel.connect(\"scportrait/examples\").get(name=name)\n",
     "        for name in [\"LckLip-mNeon\", \"DNA\", \"mCherry-LC3B\"]\n",
     "    ]\n",
     "\n",
