--- a/docs/sc-imaging3.ipynb
+++ b/docs/sc-imaging3.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "# Get single-cell images and config\n",
     "sc_datasets = (\n",
-    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    ln.Artifact.connect(\"scportrait/examples\")\n",
     "    .filter(ulabels__name=\"autophagy imaging\", is_latest=True)\n",
     "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
@@ -136,7 +136,7 @@
     "# Get unique conditions\n",
     "conditions = {af.features.get_values()[\"stimulation\"] for af in wt_cells_afs}\n",
     "condition_uls = [\n",
-    "    ln.ULabel.using(\"scportrait/examples\").get(name=name) for name in conditions\n",
+    "    ln.ULabel.connect(\"scportrait/examples\").get(name=name) for name in conditions\n",
     "]\n",
     "\n",
     "# Process each condition\n",
@@ -210,7 +210,7 @@
     "# Get unique conditions for KO cells\n",
     "conditions = {af.features.get_values()[\"stimulation\"] for af in ko_cells_afs}\n",
     "condition_uls = [\n",
-    "    ln.ULabel.using(\"scportrait/examples\").get(name=name) for name in conditions\n",
+    "    ln.ULabel.connect(\"scportrait/examples\").get(name=name) for name in conditions\n",
     "]\n",
     "\n",
     "# Process each condition\n",
