--- a/docs/sc-imaging4.ipynb
+++ b/docs/sc-imaging4.ipynb
@@ -85,7 +85,7 @@
     "        selected_cells = dataframe[dataframe.dataset == uid].copy()\n",
     "\n",
     "        # Load single-cell data\n",
-    "        artifact_path = ln.Artifact.using(\"scportrait/examples\").get(uid).cache()\n",
+    "        artifact_path = ln.Artifact.connect(\"scportrait/examples\").get(uid).cache()\n",
     "        dataset = scportrait.io.read_h5sc(artifact_path)\n",
     "\n",
     "        # Filter to selected cells\n",
@@ -158,16 +158,16 @@
    },
    "outputs": [],
    "source": [
-    "study = ln.ULabel.using(\"scportrait/examples\").get(name=\"autophagy imaging\")\n",
+    "study = ln.ULabel.connect(\"scportrait/examples\").get(name=\"autophagy imaging\")\n",
     "\n",
     "sc_datasets = (\n",
-    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    ln.Artifact.connect(\"scportrait/examples\")\n",
     "    .filter(ulabels=study, is_latest=True)\n",
     "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
     "\n",
     "featurized_datasets = (\n",
-    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    ln.Artifact.connect(\"scportrait/examples\")\n",
     "    .filter(ulabels=study, is_latest=True)\n",
     "    .filter(description=\"featurized single-cell images\")\n",
     ")\n",
@@ -615,9 +615,9 @@
     "\n",
     "# Get SpatialData object and single-cell image dataset\n",
     "sdata = (\n",
-    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    ln.Artifact.connect(\"scportrait/examples\")\n",
     "    .get(\n",
-    "        key=ln.Artifact.using(\"scportrait/examples\")\n",
+    "        key=ln.Artifact.connect(\"scportrait/examples\")\n",
     "        .get(dataset)\n",
     "        .key.replace(\"single_cell_data.h5ad\", \"spatialdata.zarr\")\n",
     "    )\n",
