--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -290,7 +290,7 @@
    "source": [
     "# load first of two cropped Xenium datasets\n",
     "xenium_aligned_1_sdata = (\n",
-    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
     "    .get(key=\"xenium_aligned_1_guide_min.zarr\")\n",
     "    .load()\n",
     ")\n",
@@ -419,7 +419,7 @@
    "outputs": [],
    "source": [
     "xenium_aligned_2_sdata = (\n",
-    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
     "    .get(key=\"xenium_aligned_2_guide_min.zarr\")\n",
     "    .load()\n",
     ")\n",
@@ -496,7 +496,7 @@
    "outputs": [],
    "source": [
     "visium_aligned_sdata = (\n",
-    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
     "    .get(key=\"visium_aligned_guide_min.zarr\")\n",
     "    .load()\n",
     ")\n",
