Update notebook link and dataset description
the sentence sounds broken and it was a Xenium dataset

--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Here is [a guide](https://docs.lamin.ai/vitessce) for visualizing spatial data with Vitessce.\n",
     "\n",
-    "Here is a [notebook](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI) that ran on the visium dataset discussed on the previous pages and added the Vitessce visualiation to [this dataset](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G)."
+    "This [notebook](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI) adds the Vitessce visualization to [this Xenium dataset](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G) discussed on the previous pages."
    ]
   },
   {
