📝 Use QueryDB for Arc & HubMAP
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Connect to the source instance:"
+    "If you are not behind a firewall, connect to the public LaminDB instance that mirrors HubMAP:"
    ]
   },
   {
@@ -39,6 +39,22 @@
    "source": [
     "# pip install lamindb\n",
     "!lamin connect laminlabs/hubmap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otherwise, create a local instance to submit queries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!lamin init --modules bionty --storage ./test-hubmap"
    ]
   },
   {
@@ -66,6 +82,16 @@
     "import h5py\n",
     "import anndata as ad\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to conveniently access records of laminlabs/hubmap\n",
+    "hubmap_db = ln.QueryDB(\"laminlabs/hubmap\")"
    ]
   },
   {
@@ -108,7 +134,9 @@
    },
    "outputs": [],
    "source": [
-    "small_intenstine_collection = ln.Collection.get(key=\"20ee458e5ee361717b68ca72caf6044e\")\n",
+    "small_intenstine_collection = hubmap_db.collections.get(\n",
+    "    key=\"20ee458e5ee361717b68ca72caf6044e\"\n",
+    ")\n",
     "small_intenstine_collection"
    ]
   },
@@ -190,7 +218,7 @@
    "outputs": [],
    "source": [
     "# Get one dataset with a specific type of heart failure\n",
-    "heart_failure_artifact = ln.Artifact.filter(\n",
+    "heart_failure_artifact = hubmap_db.artifacts.filter(\n",
     "    diseases__name=\"heart failure with reduced ejection fraction\"\n",
     ").first()\n",
     "heart_failure_artifact"
@@ -219,7 +247,7 @@
    "source": [
     "```python\n",
     "# Get one placenta tissue dataset:\n",
-    "placenta_data = ln.Artifact.filter(tissues__name=\"placenta\").first().cache()\n",
+    "placenta_data = hubmap_db.artifacts.filter(tissues__name=\"placenta\").first().cache()\n",
     "\n",
     "def load_matrix(group):\n",
     "    values = group[\"block0_values\"][:]\n",
@@ -248,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
