--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -33,7 +33,7 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "Connect to the source instance."
+    "If you are not behind a firewall, connect to the public LaminDB instance that mirrors the Arc Virtual Cell Atlas:"
    ]
   },
   {
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[wetlab,gcp]'\n",
+    "# pip install 'lamindb[gcp]'\n",
     "!lamin connect laminlabs/arc-virtual-cell-atlas"
    ]
   },
@@ -56,9 +56,27 @@
    "id": "5",
    "metadata": {},
    "source": [
+    "Otherwise, create a local instance to submit queries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!lamin init --modules bionty --storage ./test-arc-virtual-cell-atlas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
     "```{note}\n",
     "\n",
-    "If you want to transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/arc-virtual-cell-atlas\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
+    "To transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/arc-virtual-cell-atlas\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
     "\n",
     "```"
    ]
@@ -66,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {
     "tags": [
      "hide-output"
@@ -82,33 +100,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
-   "source": [
-    "## Tahoe-100M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_tahoe = ln.Project.get(name=\"Tahoe-100M\")\n",
-    "project_tahoe"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# one collection in this project\n",
-    "project_tahoe.collections.to_dataframe()"
+    "# to conveniently access records of laminlabs/arc-virtual-cell-atlas\n",
+    "arc_db = ln.QueryDB(\"laminlabs/arc-virtual-cell-atlas\")"
    ]
   },
   {
@@ -116,9 +119,7 @@
    "id": "10",
    "metadata": {},
    "source": [
-    "Every individual dataset in the atlas is an `.h5ad` file that is registered as an artifact in LaminDB.\n",
-    "\n",
-    "Artifact level metadata are registered and can be explored as follows:"
+    "## Tahoe-100M"
    ]
   },
   {
@@ -132,8 +133,48 @@
    },
    "outputs": [],
    "source": [
+    "project_tahoe = arc_db.projects.get(name=\"Tahoe-100M\")\n",
+    "project_tahoe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# one collection in this project\n",
+    "project_tahoe.collections.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "Every individual dataset in the atlas is an `.h5ad` file that is registered as an artifact in LaminDB.\n",
+    "\n",
+    "Artifact level metadata are registered and can be explored as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "# get the collection: https://lamin.ai/laminlabs/arc-virtual-cell-atlas/collection/BpavRL4ntRTzWEE5\n",
-    "collection_tahoe = ln.Collection.get(key=\"tahoe100\")\n",
+    "collection_tahoe = arc_db.collections.get(key=\"tahoe100\")\n",
     "# 14 artifacts in this collection, each correspond to a plate\n",
     "artifacts_tahoe = collection_tahoe.artifacts.distinct()\n",
     "artifacts_tahoe.to_dataframe()"
@@ -141,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "source": [
     "50 cell lines."
@@ -150,47 +191,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
+   "id": "16",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "artifacts_tahoe.list(\"cell_lines__name\")[:5]"
+    "artifacts_tahoe.to_list(\"cell_lines__name\")[:5]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "source": [
     "380 compounds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifacts_tahoe.list(\"compounds__name\")[:5]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16",
-   "metadata": {},
-   "source": [
-    "1,138 perturbations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifacts_tahoe.list(\"compound_perturbations__name\")[:5]"
    ]
   },
   {
@@ -204,9 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "# check the curated metadata of the first artifact\n",
-    "artifact1 = artifacts_tahoe[0]\n",
-    "# artifact1.describe()"
+    "artifacts_tahoe.to_list(\"compounds__name\")[:5]"
    ]
   },
   {
@@ -214,7 +229,7 @@
    "id": "19",
    "metadata": {},
    "source": [
-    "16 obs metadata features."
+    "1,138 perturbations."
    ]
   },
   {
@@ -228,12 +243,50 @@
    },
    "outputs": [],
    "source": [
-    "artifact1.features[\"obs\"].to_dataframe()"
+    "artifacts_tahoe.to_list(\"compound_perturbations__name\")[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# check the curated metadata of the first artifact\n",
+    "artifact1 = artifacts_tahoe[0]\n",
+    "artifact1.describe()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "16 obs metadata features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact1.features.slots[\"obs\"].members.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -246,13 +299,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
     "# lookup objects give you pythonic access to the values\n",
-    "cell_lines = bt.CellLine.lookup(\"ontology_id\")\n",
-    "drugs = wl.Compound.lookup()\n",
+    "cell_lines = arc_db.cell_lines.lookup(\"ontology_id\")\n",
+    "drugs = arc_db.compounds.lookup()\n",
     "\n",
     "artifacts_a549_piroxicam = artifacts_tahoe.filter(\n",
     "    cell_lines=cell_lines.cvcl_0023, compounds=drugs.piroxicam\n",
@@ -262,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "source": [
     "You can download an `.h5ad` into your local cache:\n",
@@ -279,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "27",
    "metadata": {},
    "source": [
     "### Open the obs metadata parquet file as a PyArrow Dataset\n",
@@ -290,11 +343,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs_metadata = ln.Artifact.filter(\n",
+    "obs_metadata = arc_db.artifacts.filter(\n",
     "    key__endswith=\"obs_metadata.parquet\", projects=project_tahoe\n",
     ").one()\n",
     "obs_metadata"
@@ -303,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "29",
    "metadata": {
     "tags": [
      "hide-output"
@@ -317,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "30",
    "metadata": {},
    "source": [
     "Which A549 cells are perturbed with Piroxicam."
@@ -325,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "31",
    "metadata": {},
    "source": [
     "```python\n",
@@ -339,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "32",
    "metadata": {},
    "source": [
     "Retrieve the corresponding cells from h5ad files.\n",
@@ -360,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "33",
    "metadata": {},
    "source": [
     "## scBaseCount"
@@ -369,57 +422,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_scbasecount = ln.Project.get(name=\"scBaseCount\")\n",
+    "project_scbasecount = arc_db.projects.get(name=\"scBaseCount\")\n",
     "project_scbasecount"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "35",
    "metadata": {},
    "source": [
     "This project has 105 collections (21 organisms x 5 count features):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "project_scbasecount.collections.to_dataframe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34",
-   "metadata": {},
-   "source": [
-    "### Query artifacts of interest based on metadata\n",
-    "\n",
-    "Often you might not want to access all the h5ads in a collection, but rather filter them by metadata:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "organisms = bt.Organism.lookup()\n",
-    "tissues = bt.Tissue.lookup()\n",
-    "efos = bt.ExperimentalFactor.lookup()\n",
-    "feature_counts = ln.ULabel.filter(type__name=\"STARsolo count features\").lookup()"
    ]
   },
   {
@@ -433,7 +449,44 @@
    },
    "outputs": [],
    "source": [
-    "h5ads_brain = ln.Artifact.filter(\n",
+    "project_scbasecount.collections.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37",
+   "metadata": {},
+   "source": [
+    "### Query artifacts of interest based on metadata\n",
+    "\n",
+    "Often you might not want to access all the h5ads in a collection, but rather filter them by metadata:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "organisms = arc_db.organisms.lookup()\n",
+    "tissues = arc_db.tissues.lookup()\n",
+    "efos = arc_db.experimental_factors.lookup()\n",
+    "feature_counts = arc_db.ulabels.filter(type__name=\"STARsolo count features\").lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "h5ads_brain = arc_db.artifacts.filter(\n",
     "    suffix=\".h5ad\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
@@ -448,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "40",
    "metadata": {},
    "source": [
     "### Load the h5ad files with obs metadata"
@@ -456,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "41",
    "metadata": {},
    "source": [
     "Load the h5ads as a single AnnData:"
@@ -465,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "42",
    "metadata": {
     "tags": [
      "hide-output"
@@ -484,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "43",
    "metadata": {},
    "source": [
     "Open the sample metadata:"
@@ -493,11 +546,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_meta = ln.Artifact.filter(\n",
+    "sample_meta = arc_db.artifacts.filter(\n",
     "    key__endswith=\"sample_metadata.parquet\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
@@ -510,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "45",
    "metadata": {
     "tags": [
      "hide-output"
@@ -524,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43",
+   "id": "46",
    "metadata": {},
    "source": [
     "Fetch corresponding sample metadata:"
@@ -533,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "48",
    "metadata": {},
    "source": [
     "Add the sample metadata to the AnnData:"
@@ -554,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "50",
    "metadata": {
     "tags": [
      "hide-output"
@@ -581,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
