🎨 Add atlas preview
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "If you use the data academically, please cite the original publication [Jain et al. 2023](https://www.nature.com/articles/s41556-023-01194-w).\n",
     "\n",
-    "Here, we show how the HubMAP instance is structured and how datasets and be queried and accessed."
+    "Here, we show how the HubMAP instance is structured and how datasets and be queried and accessed.\n",
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
    ]
   },
   {
@@ -55,17 +56,6 @@
    "outputs": [],
    "source": [
     "#!lamin init --modules bionty --storage ./test-hubmap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "If you want to transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/hubmap\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
-    "\n",
-    "```"
    ]
   },
   {
