--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "Lamin mirrors the dataset for simplified access here: [laminlabs/arc-virtual-cell-atlas](https://lamin.ai/laminlabs/arc-virtual-cell-atlas).\n",
     "\n",
-    "If you use the data academically, please cite the original publications, [Youngblut _et al._ (2025)](https://arcinstitute.org/manuscripts/scBaseCount) and [Zhang _et al._ (2025)](https://biorxiv.org/10.1101/2025.02.20.639398)."
+    "If you use the data academically, please cite the original publications, [Youngblut _et al._ (2025)](https://arcinstitute.org/manuscripts/scBaseCount) and [Zhang _et al._ (2025)](https://biorxiv.org/10.1101/2025.02.20.639398).\n",
+    "\n",
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
    ]
   },
   {
@@ -70,21 +72,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "To transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/arc-virtual-cell-atlas\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "tags": [
      "hide-output"
@@ -102,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {
     "tags": [
      "hide-output"
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Tahoe-100M"
@@ -125,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "tags": [
      "hide-output"
@@ -140,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {
     "tags": [
      "hide-output"
@@ -154,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "source": [
     "Every individual dataset in the atlas is an `.h5ad` file that is registered as an artifact in LaminDB.\n",
@@ -165,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "tags": [
      "hide-output"
@@ -182,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "50 cell lines."
@@ -191,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {
     "tags": [
      "hide-output"
@@ -204,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "source": [
     "380 compounds."
@@ -213,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {
     "tags": [
      "hide-output"
@@ -226,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "1,138 perturbations."
@@ -235,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {
     "tags": [
      "hide-output"
@@ -249,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {
     "tags": [
      "hide-output"
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "source": [
     "16 obs metadata features."
@@ -273,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {
     "tags": [
      "hide-output"
@@ -286,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -299,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "source": [
     "You can download an `.h5ad` into your local cache:\n",
@@ -332,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "source": [
     "### Open the obs metadata parquet file as a PyArrow Dataset\n",
@@ -343,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {
     "tags": [
      "hide-output"
@@ -370,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "Which A549 cells are perturbed with Piroxicam."
@@ -378,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "source": [
     "```python\n",
@@ -392,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "source": [
     "Retrieve the corresponding cells from h5ad files.\n",
@@ -413,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "source": [
     "## scBaseCount"
@@ -422,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "source": [
     "This project has 105 collections (21 organisms x 5 count features):"
@@ -441,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {
     "tags": [
      "hide-output"
@@ -454,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -465,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "38",
    "metadata": {
     "tags": [
      "hide-output"
@@ -501,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "source": [
     "### Load the h5ad files with obs metadata"
@@ -509,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "source": [
     "Load the h5ads as a single AnnData:"
@@ -518,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {
     "tags": [
      "hide-output"
@@ -537,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43",
+   "id": "42",
    "metadata": {},
    "source": [
     "Open the sample metadata:"
@@ -546,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "44",
    "metadata": {
     "tags": [
      "hide-output"
@@ -577,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "source": [
     "Fetch corresponding sample metadata:"
@@ -586,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "47",
    "metadata": {},
    "source": [
     "Add the sample metadata to the AnnData:"
@@ -607,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "49",
    "metadata": {
     "tags": [
      "hide-output"
