--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -18,13 +18,8 @@
     "If you use the data academically, please cite the original publication [Jain et al. 2023](https://www.nature.com/articles/s41556-023-01194-w).\n",
     "\n",
     "Here, we show how the HubMAP instance is structured and how datasets and be queried and accessed.\n",
-    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer).\n",
+    "\n",
     "If you are not behind a firewall, connect to the public LaminDB instance that mirrors HubMAP:"
    ]
   },
