--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -27,21 +27,15 @@
     "\n",
     "If you use the data academically, please cite the original publications, [Youngblut _et al._ (2025)](https://arcinstitute.org/manuscripts/scBaseCount) and [Zhang _et al._ (2025)](https://biorxiv.org/10.1101/2025.02.20.639398).\n",
     "\n",
-    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3",
-   "metadata": {},
-   "source": [
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer).\n",
+    "\n",
     "If you are not behind a firewall, connect to the public LaminDB instance that mirrors the Arc Virtual Cell Atlas:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {
     "tags": [
      "hide-output"
@@ -55,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "source": [
     "Otherwise, create a local instance to submit queries:"
@@ -64,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {
     "tags": [
      "hide-output"
@@ -92,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "tags": [
      "hide-output"
@@ -106,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Tahoe-100M"
@@ -115,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {
     "tags": [
      "hide-output"
@@ -130,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "tags": [
      "hide-output"
@@ -144,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "Every individual dataset in the atlas is an `.h5ad` file that is registered as an artifact in LaminDB.\n",
@@ -155,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {
     "tags": [
      "hide-output"
@@ -172,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "source": [
     "50 cell lines."
@@ -181,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {
     "tags": [
      "hide-output"
@@ -194,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "source": [
     "380 compounds."
@@ -203,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {
     "tags": [
      "hide-output"
@@ -216,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "1,138 perturbations."
@@ -225,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {
     "tags": [
      "hide-output"
@@ -239,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {
     "tags": [
      "hide-output"
@@ -254,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "source": [
     "16 obs metadata features."
@@ -263,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {
     "tags": [
      "hide-output"
@@ -276,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -289,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "source": [
     "You can download an `.h5ad` into your local cache:\n",
@@ -322,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "source": [
     "### Open the obs metadata parquet file as a PyArrow Dataset\n",
@@ -333,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {
     "tags": [
      "hide-output"
@@ -360,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "source": [
     "Which A549 cells are perturbed with Piroxicam."
@@ -368,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "```python\n",
@@ -382,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "source": [
     "Retrieve the corresponding cells from h5ad files.\n",
@@ -403,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "source": [
     "## scBaseCount"
@@ -412,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "source": [
     "This project has 105 collections (21 organisms x 5 count features):"
@@ -431,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {
     "tags": [
      "hide-output"
@@ -444,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -455,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {
     "tags": [
      "hide-output"
@@ -491,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "source": [
     "### Load the h5ad files with obs metadata"
@@ -499,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "source": [
     "Load the h5ads as a single AnnData:"
@@ -508,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "40",
    "metadata": {
     "tags": [
      "hide-output"
@@ -527,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "41",
    "metadata": {},
    "source": [
     "Open the sample metadata:"
@@ -536,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "43",
    "metadata": {
     "tags": [
      "hide-output"
@@ -567,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "44",
    "metadata": {},
    "source": [
     "Fetch corresponding sample metadata:"
@@ -576,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "source": [
     "Add the sample metadata to the AnnData:"
@@ -597,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "48",
    "metadata": {
     "tags": [
      "hide-output"
