--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -284,7 +284,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# lookup objects give you pythonic access to the values\n",
@@ -328,7 +332,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "obs_metadata = arc_db.artifacts.filter(\n",
@@ -407,7 +415,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "project_scbasecount = arc_db.projects.get(name=\"scBaseCount\")\n",
@@ -450,7 +462,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "36",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "organisms = arc_db.organisms.lookup()\n",
@@ -531,7 +547,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "sample_meta = arc_db.artifacts.filter(\n",
@@ -540,7 +560,6 @@
     "    organisms=organisms.human,\n",
     "    ulabels=feature_counts.genefull_ex50pas,\n",
     ").one()\n",
-    "\n",
     "sample_meta"
    ]
   },
@@ -571,7 +590,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "45",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "filter_expr = pc.field(\"srx_accession\").isin(\n",
@@ -592,7 +615,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "47",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata_concat.obs = adata_concat.obs.merge(\n",
